--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ p{
 }
 .background{
     background-image: url(../img/background\ 2.svg);
-    background-repeat: no-repeat;
+    background-size: 100%;
 }
 .background img{
     padding-bottom: 82px;
