--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,45 @@
-#email{
+#e-mail, #e-mail-redef{
     font-family: 'Open Sans', sans-serif;
+}
+
+#e-mail-redef{
+    font-weight: 600;
+}
+
+#informacao-email form input, #informacao-senha form input{
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 4px;
+    border: 1px solid var(--Gray-4, #BDBDBD);
+    width: 368px;
+    height: 42px;
+}
+
+#botao-enviar button{
+    display: flex;
+    height: 48px;
+    width: 368px;
+    padding: 10px 20px;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    border-radius: 6px;
+}
+
+.senha {
+    position: relative;
+}
+
+.bi-eye-slash {
+    color: #307FE2;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    right: 10px;
+    cursor: pointer;
 }
 
 p{
@@ -11,16 +51,22 @@ p{
     font-family: 'Poppins', sans-serif;
     height: 48px;
 }
+
 *{
     font-family: 'Poppins', sans-serif;
 }
+
 .background{
     background-image: url(../img/background\ 2.svg);
     background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
+
 .background img{
     padding-bottom: 82px;
 }
+
 .barra-azul{
     height: 4px;
     width: 214.55px;
@@ -41,6 +87,7 @@ p{
     height: 60px;
     width: 60px;
 }
-#bloco-login{
-    padding-bottom: 258px;
+
+#cadastrar {
+    font-size: 12px;
 }
