--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,8 @@ p{
 
 *{
     font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 .background{
@@ -176,9 +178,18 @@ form input{
     color: #0095D9;
 }
 
+#form-p{
+    padding: 0;
+}
+
+#label{
+    padding: 0;
+}
+
 #button{
     background-color: #0095D9;
     border: none;
+    width: 170px;
 }
 
 #excluir{
