--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,33 @@ p{
 .options {
     max-width: 201px!important;
 }
+
+.bi-list, .bi-house-door, .bi-star {
+    color: black;
+}
+
+.bi-box-arrow-right{
+    color: #FF161F;
+}
+
+/* Tarefa 5 */
+
+#tipo{
+    color: #0095D9;
+    background-color: #E9F8FF;
+    border-radius: 50px;
+    padding: 2px 6px;
+}
+
+#link-card{
+    color: #0095D9;
+    font-size: .875em;
+}
+
+#modal{
+    width: 172px;
+}
+
+#home{
+    color: #0095D9;
+}
