Adicionando progresso inicial

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,14 @@ p{
     font-size: 40px;
 }
 
-/* Tarefa 5 */
+
+/* Página 8 */
+
+.gerar{
+    color: #0095D9;
+}
+
+/* Página 9 */
 
 #tipo{
     color: #0095D9;
@@ -68,3 +75,5 @@ p{
 #home{
     color: #0095D9;
 }
+
+
