Adicionando primeira versão

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ p{
 
 .gambiarra{
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .padeiro {
@@ -92,6 +93,10 @@ p{
     background-color: #fff;
 }
 
+.formcategoria{
+    padding: 10px;
+}
+
 .iconepesquisa{
     position: absolute;
     width: 20px;
@@ -113,13 +118,35 @@ p{
     top: 16px;
 }
 
-.especificações{
-    gap: 180px;
+.esptitulo :nth-child(1){
+    width: 265px;
 }
 
-.individual{
+.esptitulo :nth-child(2){
+    width: 170px;
+}
+
+.listainsana p{
+    font-size: 14px;
+}
+
+.esptitulo, .especificações{
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+.nomemodalidade{
+    width: 264px;
+}
+
+.participantes{
+    width: 300px;
+}
+
+.individual{    
     background-color: #E9F8FF;
     color: #0095D9;
+    margin-right: 140px;
 }
 
 /* Página 9 */
@@ -146,6 +173,7 @@ p{
 }
 
 /*segunda página 11*/
+
 .formulario-ultima-pg{
     color: #333333;
 }
