Enviand versão final 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,8 +72,12 @@ p{
 
 /* Página 8 */
 
-.gerar{
+.gerarrelatorio{
     color: #0095D9;
+}
+
+.gerarrelatorio:hover{
+    color: white;
 }
 
 .pesquisar{
