consertando as diferenças que tinham entre cada pagina e deixando um padrão, vale no minimo 100 pontos em cesarmar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,13 +254,10 @@ form{
 
 /*Barra da Esquerda*/
 
-.gambiarra{
-    overflow-x: hidden;
-}
 
 .padeiro {
     padding: 32px;   
-    padding-left: 40px;
+
 }
 
 .options {
@@ -404,7 +401,8 @@ form{
 }
 
 #modal{
-    width: 172px;
+    max-width: 172px;
+    min-width: 172px;
     height: max-content;
 }
 
